k8s/gitlab.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
spec:
  clusterIP: None
  ports:
  - { port: $PORT_GITLAB_SSH, targetPort: 22, name: ssh }
  - { port: 80, name: $SERVICE_NAME }
  - { port: 443, name: https }
  selector:
    app.kubernetes.io/name: $SERVICE_NAME
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME-nodeport
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
spec:
  type: NodePort
  ports:
  - { port: 22, nodePort: $NODEPORT_GITLAB_SSH, name: ssh }
  selector:
    app.kubernetes.io/name: $SERVICE_NAME
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
  name: $SERVICE_NAME
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME
    spec:
      containers:
      - name: $SERVICE_NAME
        command: [/bin/bash]
        args:
        - -c
        - >
          mkdir -p /var/backups/gitlab &&
          rm -fr /var/opt/gitlab/backups &&
          ln -fnsT /var/backups/gitlab /var/opt/gitlab/backups &&
          sh -c 'sh /usr/local/bin/gitback &' &&
          exec /assets/wrapper
        image: gitlab/gitlab-ce:$VERSION_GITLAB
        ports:
        - containerPort: 22
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            memory: 6144Mi
          requests:
            cpu: 400m
            memory: 3172Mi
        volumeMounts:
        - mountPath: /etc/gitlab
          name: $SERVICE_NAME
          subPath: config
        - mountPath: /etc/gitlab/gitlab.rb
          name: config
          subPath: gitlab.rb
        - mountPath: /usr/local/bin/gitback
          name: config
          subPath: gitback
        - mountPath: /var/opt/gitlab
          name: $SERVICE_NAME
          subPath: data
        - mountPath: /var/backups
          name: backup
          subPath: $SERVICE_NAME
        - mountPath: /var/log/gitlab
          name: logs
      dnsConfig:
        nameservers: [ $DNS_SERVERS ]
        options:
        - name: use-vc
        - name: ndots
      hostname: git
      nodeSelector:
        service.$SERVICE_NAME: allow
      serviceAccountName: gitlab-pod-privileged
      volumes:
      - name: backup
        hostPath: { path: $PATH_BKP }
      - name: config
        configMap:
          name: $SERVICE_NAME
      - name: logs
        emptyDir: {}
      - name: $SERVICE_NAME
        hostPath: { path: $K8S_VOLUMES_PATH/$SERVICE_NAME }
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-access-log: "false"
  name: $SERVICE_NAME-ingress
spec:
  tls:
  - secretName: tls-$SERVICE_NAME
    hosts:
    - git.$MYDOMAIN
  rules:
  - host: git.$MYDOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: $SERVICE_NAME
          servicePort: 80
